--- a/_pages/faqs.html
+++ b/_pages/faqs.html
@@ -1,7 +1,8 @@
 ---
-layout: 2017_default
-permalink: /register
-title: Register
+layout: default
+permalink: /faqs
+title: Frequently Asked Questions (FAQ)
+published: true
 ---
     <!--background color-->
     <script type="text/javascript">
