--- a/_pages/register.html
+++ b/_pages/register.html
@@ -1,8 +1,7 @@
 ---
-layout: 2017_default
-permalink: /faqs
-title: Frequently Asked Questions (FAQ)
-published: true
+layout: default
+permalink: /register
+title: Register
 ---
     <!--background color-->
     <script type="text/javascript">
