decided to remove _layouts folder for now, since my page layouts will be extremely simple and probably can't be abstracted with much utility; updated readme to hold basic information about how to use layouts should I want to in the future.

--- a/pages/hw.html
+++ b/pages/hw.html
@@ -17,3 +17,25 @@ permalink: /hw.html
 
 	</body>
 </html>
+
+<!-- pdf
+<html>
+  {% include /head.html %}
+  <body>
+	{{ content }}
+  </body>
+</html>
+-->
+
+<!-- default
+<html>
+  {% include /js.html %}
+  {% include /head.html %}
+
+  <body>
+	{% include /header.html %}
+		{{ content }}
+  </body>
+  {% include /footer.html %}
+</html>
+-->
