navbar links now work as expected, and hello world page looks good

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     {% include head.html %}
 
-	<body id="page-top" class="index">
+	<body style="padding-top: 0">
 
 	{% include header.html %}
 
