--- a/pages/example.html
+++ b/pages/example.html
@@ -4,14 +4,13 @@ permalink: /example.html
 <html>
 	{% include head.html %}
 
-	<body id="page-top" class="index">
-
+	<body>
 	{% include header.html %}
 
-	Hello, World!
+	<div class="container">Hello, World!</div>
 
-	<!--{% include footer.html %}-->
-	<!--{% include js.html %} -->
+	{% include footer.html %}
+	{% include js.html %}
 
 
 	</body>
