made everything a cdn link; removed the pretentious footer; moved to bootstrap.native because bootstrap 5 isn't coming out fast enough and fuck jquery honestly; simplified my theme file structure, because there isn't that much left in it after these simplifications; updated links everywhere so crap still mostly works; my agency.js is broken, it seems, but that's for another day '

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	{% include writing.html %}
 	{% include popup.html %}
 	<!-- include intro.html This is a fun video section.-->
-	{% include contact.html %}
-	{% include footer.html %}
+	<!-- {% include contact.html %} -->
 	{% include js.html %}
 
 	</body>
