renamed header to navbar so as to be less confusable with the head and because I think navbar is more descriptive; removed contact me from the navbar, since I removed that section because fuck they have my email for crying out loud; trying a scheme to load a lighter version of the background image first, then replace with the 9.3MB version after based on the answer here https://stackoverflow.com/questions/27934548/load-a-low-res-background-image-first-then-a-high-res-one

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<body style="padding-top: 0">
 
-	{% include header.html %}
+	{% include navbar.html %}
 
 	<section class="welcome" id="welcome">
 		<div class="container">
@@ -13,6 +13,8 @@
 			<div class="intro-lead-in">Electrical and Software Engineer</div>
 		</div>
 	</section>
+	<img id="purple_stars" class="hidden" src="theme/purple_stars_full.jpg"
+		onload="document.getElementById('welcome').style.backgroundImage='url(theme/purple_stars.jpg)';">
 
 	{% include about.html %}
 	{% include projects.html %}
