added cats page so their QR code goes somewhere, yay!

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 				</div>
 			</div>
 
-			This website constitutes one! Seems like every time I finally decide to break it open again I find more to simplify. It's handy because next time I'm slightly less confused upon startup, but it's still Sisyphean enough that I haven't sat down and earnestly filled out this section. (Sorry) Finally just removed the dependency on jquery by switching to bootstrap.native. Unforunately Bootstrap 5, which will also eschew jquery, doesn't look like it will be out for a while yet. Then I went on a cdn-ing tear, removing fontawesome and bootstrap from the repo and just adding the rel links to the head like sane developers are supposed to do. You get the picture. Tons of fun. So many technologies to learn and so little leftover mental focus in a day. I have to stay sane, you know. I'll be back. Until then, bon voyage.
+            Being built</br></br>
+
+			This website constitutes one! Seems like every time I finally decide to break it open again I find more to simplify. It's handy because next time I'm slightly less confused upon startup, but it's still Sisyphean enough that I haven't sat down and earnestly filled out this section. (Sorry) Finally just removed the dependency on jquery by switching to bootstrap.native. Unforunately Bootstrap 5, which will also eschew jquery, doesn't look like it will be out for a while yet. Then I went on a cdn-ing tear, removing fontawesome and bootstrap from the repo and just adding the rel links to the head like sane developers are supposed to do. You get the picture. Tons of fun. So many technologies to learn and so little leftover mental focus in a day. I'll be back for more eventually, inevitably.
 
 			<div class="row">
 			{% for post in site.projects %}
@@ -84,7 +86,7 @@
 		</div>
 	</section>
 	
-	{% include popup.html %}
+	<!-- {% include popup.html %} for "modals", which are basically popups. Good for image display?-->
 	<!-- include intro.html This is a fun video section.-->
 	<!-- {% include contact.html %} -->
 	{% include js.html %}
