--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 ---
 <html>
-    {% include head.html %}
+	{% include head.html %}
 
 	<body style="padding-top: 0">
 
@@ -23,6 +23,8 @@
 				</div>
 			</div>
 
+			<img src="/assets/my_face.jpg" width="150"/>
+
 			<p>Thanks for visiting, and welcome.</p>
 
 			<p>This site presents some of who I am through projects I've done, jobs I've worked, and things I've written.</p>
@@ -43,7 +45,7 @@
 				</div>
 			</div>
 
-            Being built</br></br>
+			Being built</br></br>
 
 			This website constitutes one! Seems like every time I finally decide to break it open again I find more to simplify. It's handy because next time I'm slightly less confused upon startup, but it's still Sisyphean enough that I haven't sat down and earnestly filled out this section. (Sorry) Finally just removed the dependency on jquery by switching to bootstrap.native. Unforunately Bootstrap 5, which will also eschew jquery, doesn't look like it will be out for a while yet. Then I went on a cdn-ing tear, removing fontawesome and bootstrap from the repo and just adding the rel links to the head like sane developers are supposed to do. You get the picture. Tons of fun. So many technologies to learn and so little leftover mental focus in a day. I'll be back for more eventually, inevitably.
 
@@ -86,9 +88,8 @@
 		</div>
 	</section>
 	
-	<!-- {% include popup.html %} for "modals", which are basically popups. Good for image display?-->
-	<!-- include intro.html This is a fun video section.-->
-	<!-- {% include contact.html %} -->
+	{% include popup.html %} <!-- for "modals", which are basically popups. Good for image display -->
+	{% include intro.html %}
 	{% include js.html %}
 
 	</body>
